Analyse_Syntaxique/turtle/build/turtle-parser.output
Terminals unused in grammar

   "name"


Grammar

    0 $accept: unit $end

    1 unit: cmds

    2 cmds: cmd cmds
    3     | %empty

    4 cmd: "forward" expr

    5 expr_literal: "value"

    6 expr_primary: expr_literal

    7 expr: expr_primary


Terminals, with rules where they appear

$end (0) 0
error (256)
"value" (258) 5
"name" (259)
"forward" (260) 4


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
unit (7)
    on left: 1, on right: 0
cmds (8)
    on left: 2 3, on right: 1 2
cmd (9)
    on left: 4, on right: 2
expr_literal (10)
    on left: 5, on right: 6
expr_primary (11)
    on left: 6, on right: 7
expr (12)
    on left: 7, on right: 4


State 0

    0 $accept: . unit $end

    "forward"  shift, and go to state 1

    $default  reduce using rule 3 (cmds)

    unit  go to state 2
    cmds  go to state 3
    cmd   go to state 4


State 1

    4 cmd: "forward" . expr

    "value"  shift, and go to state 5

    expr_literal  go to state 6
    expr_primary  go to state 7
    expr          go to state 8


State 2

    0 $accept: unit . $end

    $end  shift, and go to state 9


State 3

    1 unit: cmds .

    $default  reduce using rule 1 (unit)


State 4

    2 cmds: cmd . cmds

    "forward"  shift, and go to state 1

    $default  reduce using rule 3 (cmds)

    cmds  go to state 10
    cmd   go to state 4


State 5

    5 expr_literal: "value" .

    $default  reduce using rule 5 (expr_literal)


State 6

    6 expr_primary: expr_literal .

    $default  reduce using rule 6 (expr_primary)


State 7

    7 expr: expr_primary .

    $default  reduce using rule 7 (expr)


State 8

    4 cmd: "forward" expr .

    $default  reduce using rule 4 (cmd)


State 9

    0 $accept: unit $end .

    $default  accept


State 10

    2 cmds: cmd cmds .

    $default  reduce using rule 2 (cmds)
